Fixed lastest funding rounds now shows 3 columns on tablet

--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,6 @@ header {
 
 .main-articles-container {
   margin: 5px 30px;
-  /* height: 475px; */
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 2fr 1fr;
   gap: 10px;
@@ -264,7 +263,7 @@ header {
 }
 
 .news-img {
-  width: 270px;
+  width: 100%;
   height: 135px;
   object-fit: cover;
 }
@@ -577,14 +576,18 @@ footer {
 
   .main-article h1 {
     color: #fff;
-    font-size: 40px;
+    font-size: 2em;
     margin: 0;
   }
 
   .main-article h2 {
     color: #fff;
-    font-size: 1.4em;
+    font-size: 1.2em;
     margin: 0;
+  }
+
+  .main-article p {
+    font-size: 0.8em;
   }
 
   .latest-news-container {
@@ -610,8 +613,20 @@ footer {
     grid-template-columns: 1fr;
   }
 
+  .cat-last-art-hero {
+    width: 100%;
+  }
+
   .last-deals-container {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .funding-rounds-rounds {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .funding-round-4 {
+    display: none;
   }
 }
 
